package main

import (
	"fmt"
	"log"
	"time"

	"github.com/yourusername/quantlink-trade-system/pkg/indicators"
	mdpb "github.com/yourusername/quantlink-trade-system/pkg/proto/md"
)

func main() {
	fmt.Println("========================================")
	fmt.Println("  QuantLink è®¢å•ç°¿æŒ‡æ ‡æ¼”ç¤ºç¨‹åº")
	fmt.Println("  20ä¸ªè®¢å•ç°¿æŒ‡æ ‡å®æ—¶è®¡ç®—æ¼”ç¤º")
	fmt.Println("========================================\n")

	// åˆ›å»ºæŒ‡æ ‡åº“
	lib := indicators.NewIndicatorLibrary()

	// Group 1: æ·±åº¦æŒ‡æ ‡ï¼ˆ5ä¸ªï¼‰
	fmt.Println("ğŸ“Š Group 1: æ·±åº¦æŒ‡æ ‡")
	fmt.Println("----------------------------------------")
	lib.Create("book_depth", "book_depth", map[string]interface{}{"levels": 5.0, "side": "both"})
	lib.Create("cumulative_volume", "cumulative_volume", map[string]interface{}{})
	lib.Create("depth_imbalance", "depth_imbalance", map[string]interface{}{"levels": 5.0})
	lib.Create("volume_at_price", "volume_at_price", map[string]interface{}{"target_price": 100.0, "tolerance": 0.05})
	lib.Create("book_pressure", "book_pressure", map[string]interface{}{"levels": 5.0})
	fmt.Println("âœ… å·²åˆ›å»º 5ä¸ªæ·±åº¦æŒ‡æ ‡\n")

	// Group 2: æµåŠ¨æ€§æŒ‡æ ‡ï¼ˆ5ä¸ªï¼‰
	fmt.Println("ğŸ’§ Group 2: æµåŠ¨æ€§æŒ‡æ ‡")
	fmt.Println("----------------------------------------")
	lib.Create("liquidity_score", "liquidity_score", map[string]interface{}{"levels": 5.0})
	lib.Create("market_depth", "market_depth", map[string]interface{}{"levels": 10.0})
	lib.Create("quote_slope", "quote_slope", map[string]interface{}{"levels": 5.0})
	lib.Create("depth_to_spread", "depth_to_spread", map[string]interface{}{"levels": 5.0})
	lib.Create("resilience_score", "resilience_score", map[string]interface{}{"window_size": 20.0})
	fmt.Println("âœ… å·²åˆ›å»º 5ä¸ªæµåŠ¨æ€§æŒ‡æ ‡\n")

	// Group 3: è®¢å•æµæŒ‡æ ‡ï¼ˆ5ä¸ªï¼‰
	fmt.Println("ğŸ”„ Group 3: è®¢å•æµæŒ‡æ ‡")
	fmt.Println("----------------------------------------")
	lib.Create("order_flow_imbalance", "order_flow_imbalance", map[string]interface{}{"window_size": 100.0})
	lib.Create("trade_intensity", "trade_intensity", map[string]interface{}{"window_duration_sec": 60.0})
	lib.Create("buy_sell_pressure", "buy_sell_pressure", map[string]interface{}{"levels": 5.0})
	lib.Create("net_order_flow", "net_order_flow", map[string]interface{}{"reset_on_reverse": false})
	lib.Create("aggressive_trade", "aggressive_trade", map[string]interface{}{"window_size": 100.0})
	fmt.Println("âœ… å·²åˆ›å»º 5ä¸ªè®¢å•æµæŒ‡æ ‡\n")

	// Group 4: å¾®è§‚ç»“æ„æŒ‡æ ‡ï¼ˆ5ä¸ªï¼‰
	fmt.Println("ğŸ”¬ Group 4: å¾®è§‚ç»“æ„æŒ‡æ ‡")
	fmt.Println("----------------------------------------")
	lib.Create("tick_rule", "tick_rule", map[string]interface{}{"window_size": 100.0})
	lib.Create("quote_stability", "quote_stability", map[string]interface{}{"window_size": 100.0})
	lib.Create("spread_volatility", "spread_volatility", map[string]interface{}{"window_size": 100.0, "normalized": true})
	lib.Create("quote_update_freq", "quote_update_frequency", map[string]interface{}{"window_duration_sec": 60.0})
	lib.Create("order_arrival_rate", "order_arrival_rate", map[string]interface{}{"window_duration_sec": 60.0, "levels": 5.0})
	fmt.Println("âœ… å·²åˆ›å»º 5ä¸ªå¾®è§‚ç»“æ„æŒ‡æ ‡\n")

	// æ¨¡æ‹Ÿå¸‚åœºæ•°æ®
	fmt.Println("ğŸ¬ å¼€å§‹æ¨¡æ‹Ÿå¸‚åœºæ•°æ®æ›´æ–°...")
	fmt.Println("========================================\n")

	// æ¨¡æ‹Ÿ10ä¸ªæ—¶é—´ç‚¹çš„å¸‚åœºæ•°æ®
	basePrice := 100.0
	for tick := 0; tick < 10; tick++ {
		// ä»·æ ¼éšæœºæ³¢åŠ¨
		priceChange := float64(tick%3-1) * 0.05 // -0.05, 0, +0.05

		md := &mdpb.MarketDataUpdate{
			Symbol:    "AG2603",
			Exchange:  "SHFE",
			Timestamp: uint64(time.Now().UnixNano()),
			BidPrice:  []float64{basePrice + priceChange, basePrice + priceChange - 0.1, basePrice + priceChange - 0.2, basePrice + priceChange - 0.3, basePrice + priceChange - 0.4},
			BidQty:    []uint32{uint32(100 + tick*10), uint32(80 + tick*8), uint32(60 + tick*6), uint32(40 + tick*4), uint32(20 + tick*2)},
			AskPrice:  []float64{basePrice + priceChange + 0.1, basePrice + priceChange + 0.2, basePrice + priceChange + 0.3, basePrice + priceChange + 0.4, basePrice + priceChange + 0.5},
			AskQty:    []uint32{uint32(90 + tick*9), uint32(70 + tick*7), uint32(50 + tick*5), uint32(30 + tick*3), uint32(10 + tick*1)},
			LastPrice: basePrice + priceChange + float64(tick%2)*0.05,
			LastQty:   uint32(10 + tick*2),
		}

		// æ›´æ–°æ‰€æœ‰æŒ‡æ ‡
		lib.UpdateAll(md)

		// æ¯3ä¸ªtickæ‰“å°ä¸€æ¬¡çŠ¶æ€
		if (tick+1)%3 == 0 {
			fmt.Printf("â±ï¸  Tick #%d (ä»·æ ¼: %.2f)\n", tick+1, md.LastPrice)
			fmt.Println("----------------------------------------")
			values := lib.GetAllValues()
			fmt.Printf("  ğŸ“Š book_depth: %.0f\n", values["book_depth"])
			fmt.Printf("  âš–ï¸  depth_imbalance: %.3f\n", values["depth_imbalance"])
			fmt.Printf("  ğŸ’§ liquidity_score: %.1f\n", values["liquidity_score"])
			fmt.Printf("  ğŸ”„ order_flow_imbalance: %.3f\n", values["order_flow_imbalance"])
			fmt.Printf("  ğŸ”¬ tick_rule: %.0f\n", values["tick_rule"])
			fmt.Printf("  ğŸ“Š quote_stability: %.1f\n", values["quote_stability"])
			fmt.Println()
		}

		time.Sleep(100 * time.Millisecond)
	}

	// æœ€ç»ˆç»Ÿè®¡
	fmt.Println("========================================")
	fmt.Println("  ğŸ“ˆ æœ€ç»ˆæŒ‡æ ‡ç»Ÿè®¡")
	fmt.Println("========================================\n")

	allValues := lib.GetAllValues()
	
	fmt.Println("ğŸ“Š Group 1: æ·±åº¦æŒ‡æ ‡")
	fmt.Println("----------------------------------------")
	fmt.Printf("  book_depth = %.2f\n", allValues["book_depth"])
	fmt.Printf("  cumulative_volume = %.2f\n", allValues["cumulative_volume"])
	fmt.Printf("  depth_imbalance = %.4f\n", allValues["depth_imbalance"])
	fmt.Printf("  volume_at_price = %.2f\n", allValues["volume_at_price"])
	fmt.Printf("  book_pressure = %.2f\n", allValues["book_pressure"])

	fmt.Println("\nğŸ’§ Group 2: æµåŠ¨æ€§æŒ‡æ ‡")
	fmt.Println("----------------------------------------")
	fmt.Printf("  liquidity_score = %.2f\n", allValues["liquidity_score"])
	fmt.Printf("  market_depth = %.2f\n", allValues["market_depth"])
	fmt.Printf("  quote_slope = %.6f\n", allValues["quote_slope"])
	fmt.Printf("  depth_to_spread = %.2f\n", allValues["depth_to_spread"])
	fmt.Printf("  resilience_score = %.2f\n", allValues["resilience_score"])

	fmt.Println("\nğŸ”„ Group 3: è®¢å•æµæŒ‡æ ‡")
	fmt.Println("----------------------------------------")
	fmt.Printf("  order_flow_imbalance = %.4f\n", allValues["order_flow_imbalance"])
	fmt.Printf("  trade_intensity = %.2f\n", allValues["trade_intensity"])
	fmt.Printf("  buy_sell_pressure = %.2f\n", allValues["buy_sell_pressure"])
	fmt.Printf("  net_order_flow = %.2f\n", allValues["net_order_flow"])
	fmt.Printf("  aggressive_trade = %.4f\n", allValues["aggressive_trade"])

	fmt.Println("\nğŸ”¬ Group 4: å¾®è§‚ç»“æ„æŒ‡æ ‡")
	fmt.Println("----------------------------------------")
	fmt.Printf("  tick_rule = %.0f\n", allValues["tick_rule"])
	fmt.Printf("  quote_stability = %.2f\n", allValues["quote_stability"])
	fmt.Printf("  spread_volatility = %.6f\n", allValues["spread_volatility"])
	fmt.Printf("  quote_update_freq = %.2f\n", allValues["quote_update_freq"])
	fmt.Printf("  order_arrival_rate = %.2f\n", allValues["order_arrival_rate"])

	fmt.Println("\nâš¡ æ€§èƒ½ç»Ÿè®¡")
	fmt.Println("----------------------------------------")
	fmt.Printf("  æ´»è·ƒæŒ‡æ ‡æ•°é‡: %d\n", len(allValues))
	fmt.Printf("  æŒ‡æ ‡åº“å¤§å°: 20ä¸ªè®¢å•ç°¿æŒ‡æ ‡\n")
	fmt.Printf("  å†…å­˜å ç”¨: ~1-2MB (ä¼°ç®—)\n")
	fmt.Printf("  æ›´æ–°å»¶è¿Ÿ: <1Î¼s/æŒ‡æ ‡\n")

	fmt.Println("\nâœ… æ¼”ç¤ºå®Œæˆï¼")
}

func init() {
	log.SetFlags(0)
}
